--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "knee": "0.0.7",
     "knex": "^0.20.1",
     "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.0"
